Config cleanup / form display.

--- a/config/sites/default/block.block.entityviewcontent_components.yml
+++ b/config/sites/default/block.block.entityviewcontent_components.yml
@@ -1,6 +1,6 @@
 uuid: b7af0c32-f46b-47af-9f6f-08ab9959a0dc
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - ctools
@@ -8,7 +8,7 @@ dependencies:
     - tower_health
 id: entityviewcontent_components
 theme: tower_health
-region: full_content
+region: header
 weight: 0
 provider: null
 plugin: 'entity_view:node'
