--- a/config/sites/default/core.entity_view_display.node.page.sidebar_bottom.yml
+++ b/config/sites/default/core.entity_view_display.node.page.sidebar_bottom.yml
@@ -1,8 +1,9 @@
-uuid: 49036bbb-7a22-4c3e-a07d-9a258a005688
+uuid: dd8ab4b6-1329-4727-9c51-a50a4e7c32d9
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.sidebar_bottom
     - field.field.node.page.field_basic_components
     - field.field.node.page.field_basic_enable_nav
     - field.field.node.page.field_basic_header
@@ -12,44 +13,31 @@ dependencies:
     - field.field.node.page.field_text
     - node.type.page
   module:
-    - metatag
-    - text
+    - entity_reference_revisions
     - user
 _core:
   default_config_hash: g1S3_GLaxq4l3I9RIca5Mlz02MxI2KmOquZpHw59akM
-id: node.page.default
+id: node.page.sidebar_bottom
 targetEntityType: node
 bundle: page
-mode: default
+mode: sidebar_bottom
 content:
-  content_moderation_control:
-    weight: 1
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_metatags:
-    weight: 3
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: metatag_empty_formatter
-    region: content
-  field_text:
+  field_basic_sidebar:
+    type: entity_reference_revisions_entity_view
     weight: 0
     label: hidden
-    settings: {  }
+    settings:
+      view_mode: default
+      link: ''
     third_party_settings: {  }
-    type: text_default
     region: content
-  links:
-    weight: 2
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_basic_components: true
   field_basic_enable_nav: true
   field_basic_header: true
-  field_basic_sidebar: true
+  field_metatags: true
   field_reference_access_control: true
+  field_text: true
+  links: true
   search_api_excerpt: true
