--- a/config/sites/default/core.entity_view_display.paragraph.card.default.yml
+++ b/config/sites/default/core.entity_view_display.paragraph.card.default.yml
@@ -17,7 +17,7 @@ mode: default
 content:
   field_card_description:
     weight: 1
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: basic_string
@@ -25,7 +25,7 @@ content:
   field_card_image:
     type: entity_reference_entity_view
     weight: 2
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: false
@@ -33,7 +33,7 @@ content:
     region: content
   field_card_link:
     weight: 3
-    label: above
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
@@ -41,11 +41,11 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    type: link
+    type: link_separate
     region: content
   field_card_title:
     weight: 0
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
