--- a/config/sites/default/facets.facet.languages.yml
+++ b/config/sites/default/facets.facet.languages.yml
@@ -26,6 +26,7 @@ widget:
     show_reset_link: 0
     reset_text: 'Show all'
     hide_reset_when_no_selection: 0
+    default_option_label: Any
 query_operator: or
 use_hierarchy: false
 expand_hierarchy: false
