--- a/config/sites/default/field.field.paragraph.cards.field_cards_ref.yml
+++ b/config/sites/default/field.field.paragraph.cards.field_cards_ref.yml
@@ -7,6 +7,7 @@ dependencies:
     - paragraphs.paragraphs_type.article_card
     - paragraphs.paragraphs_type.card
     - paragraphs.paragraphs_type.cards
+    - paragraphs.paragraphs_type.video_card
   module:
     - entity_reference_revisions
 id: paragraph.cards.field_cards_ref
@@ -26,6 +27,7 @@ settings:
     target_bundles:
       card: card
       article_card: article_card
+      video_card: video_card
     target_bundles_drag_drop:
       card:
         enabled: true
@@ -51,10 +53,31 @@ settings:
       patient_story:
         weight: 17
         enabled: false
+      basic_header:
+        weight: 19
+        enabled: false
       recognition_card:
         weight: 19
         enabled: false
       recognition_cards:
         weight: 20
         enabled: false
+      cta_banner:
+        weight: 22
+        enabled: false
+      cta_list_banner:
+        weight: 23
+        enabled: false
+      header_cta:
+        weight: 25
+        enabled: false
+      icon_button:
+        weight: 27
+        enabled: false
+      rich_text:
+        weight: 33
+        enabled: false
+      video_card:
+        enabled: true
+        weight: 34
 field_type: entity_reference_revisions
