--- a/config/sites/default/core.entity_view_display.media.video.card.yml
+++ b/config/sites/default/core.entity_view_display.media.video.card.yml
@@ -1,83 +1,65 @@
-uuid: 372e972b-f033-4566-bd87-59ca546ff2c1
+uuid: 9a0af6aa-ae5c-49f6-adbc-7f87346570ab
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.media.card
     - field.field.media.video.field_media_author
     - field.field.media.video.field_media_description
     - field.field.media.video.field_media_oembed_video
     - field.field.media.video.field_media_srt
-    - image.style.thumbnail
     - media.type.video
   module:
-    - file
     - image
     - media
     - text
-    - user
-id: media.video.default
+id: media.video.card
 targetEntityType: media
 bundle: video
-mode: default
+mode: card
 content:
-  created:
-    label: hidden
-    type: timestamp
-    weight: 0
-    region: content
-    settings:
-      date_format: medium
-      custom_date_format: ''
-      timezone: ''
-    third_party_settings: {  }
   field_media_author:
-    weight: 7
-    label: above
+    type: string
+    weight: 4
+    region: content
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
   field_media_description:
-    weight: 9
-    label: above
+    type: text_default
+    weight: 1
+    region: content
+    label: hidden
     settings: {  }
     third_party_settings: {  }
-    type: text_default
-    region: content
   field_media_oembed_video:
     type: oembed
-    weight: 6
-    label: above
+    weight: 3
+    label: hidden
     settings:
       max_width: 0
       max_height: 0
     third_party_settings: {  }
     region: content
-  field_media_srt:
-    weight: 8
-    label: above
-    settings:
-      use_description_as_link_text: true
-    third_party_settings: {  }
-    type: file_default
-    region: content
-  thumbnail:
-    type: image
-    weight: 5
-    label: hidden
-    settings:
-      image_style: thumbnail
-      image_link: ''
-    region: content
-    third_party_settings: {  }
-  uid:
-    label: hidden
-    type: author
+  name:
+    type: string
     weight: 0
     region: content
-    settings: {  }
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  thumbnail:
+    type: image_url
+    weight: 2
+    label: hidden
+    settings:
+      image_style: ''
+    region: content
     third_party_settings: {  }
 hidden:
-  name: true
+  created: true
+  field_media_srt: true
   search_api_excerpt: true
+  uid: true
