--- a/config/sites/default/core.entity_view_display.media.video.media_library.yml
+++ b/config/sites/default/core.entity_view_display.media.video.media_library.yml
@@ -4,7 +4,10 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.media_library
+    - field.field.media.video.field_media_author
+    - field.field.media.video.field_media_description
     - field.field.media.video.field_media_oembed_video
+    - field.field.media.video.field_media_srt
     - image.style.medium
     - media.type.video
   module:
@@ -25,7 +28,10 @@ content:
     region: content
 hidden:
   created: true
+  field_media_author: true
+  field_media_description: true
   field_media_oembed_video: true
+  field_media_srt: true
   name: true
   search_api_excerpt: true
   uid: true
