--- a/config/sites/default/block.block.page_content.yml
+++ b/config/sites/default/block.block.page_content.yml
@@ -1,30 +1,38 @@
-uuid: 3840ec65-4e8a-4c79-94e7-cf4c93ebde55
+uuid: 8d095d21-be5d-49ec-8093-8db13d874359
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - ctools
+    - node
   theme:
     - tower_health
-id: full_content_components
+id: page_content
 theme: tower_health
-region: header
+region: content
 weight: 0
 provider: null
 plugin: 'entity_view:node'
 settings:
   id: 'entity_view:node'
-  label: 'Entity view (Content)'
+  label: 'Page Content'
   provider: ctools
   label_display: '0'
-  view_mode: components
+  view_mode: content
   context_mapping:
     entity: '@node.node_route_context:node'
 visibility:
   'entity_bundle:node':
     id: 'entity_bundle:node'
     bundles:
-      page: page
+      profile: profile
+    negate: false
+    context_mapping:
+      node: '@node.node_route_context:node'
+  node_type:
+    id: node_type
+    bundles:
+      profile: profile
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
