--- a/config/sites/default/core.entity_view_display.node.profile.page_header.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.page_header.yml
@@ -1,8 +1,9 @@
-uuid: c8aac4b5-f521-4820-9f0c-dcfd91cf62b7
+uuid: d9d8114c-52bb-4c42-8a5f-4540fba68aa1
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.page_header
     - field.field.node.profile.field_affiliations_ref
     - field.field.node.profile.field_area_interest_ref
     - field.field.node.profile.field_insurance_ref
@@ -30,14 +31,71 @@ dependencies:
     - field.field.node.profile.field_rating_comments_ref
     - field.field.node.profile.field_rating_count
     - field.field.node.profile.field_rating_overall
+    - image.style.medium
     - node.type.profile
   module:
+    - media
+    - telephone
     - user
-id: node.profile.default
+id: node.profile.page_header
 targetEntityType: node
 bundle: profile
-mode: default
-content: {  }
+mode: page_header
+content:
+  field_profile_image:
+    type: media_thumbnail
+    weight: 0
+    label: hidden
+    settings:
+      image_style: medium
+      image_link: ''
+    third_party_settings: {  }
+    region: content
+  field_profile_job_title:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_profile_phone:
+    weight: 5
+    label: hidden
+    settings:
+      title: ''
+    third_party_settings: {  }
+    type: telephone_link
+    region: content
+  field_profile_video:
+    type: entity_reference_entity_view
+    weight: 2
+    label: hidden
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    region: content
+  field_rating_count:
+    weight: 4
+    label: hidden
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
+    region: content
+  field_rating_overall:
+    weight: 3
+    label: hidden
+    settings:
+      thousand_separator: ''
+      decimal_separator: .
+      scale: 2
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_decimal
+    region: content
 hidden:
   content_moderation_control: true
   field_affiliations_ref: true
@@ -51,21 +109,15 @@ hidden:
   field_profile_epic_id: true
   field_profile_first_name: true
   field_profile_gender: true
-  field_profile_image: true
-  field_profile_job_title: true
   field_profile_languages: true
   field_profile_last_name: true
   field_profile_middle_name: true
   field_profile_npi: true
-  field_profile_phone: true
   field_profile_practid: true
   field_profile_professional_title: true
   field_profile_scheduling: true
   field_profile_type: true
-  field_profile_video: true
   field_rating_comment_count: true
   field_rating_comments_ref: true
-  field_rating_count: true
-  field_rating_overall: true
   links: true
   search_api_excerpt: true
