--- a/config/sites/default/field.field.paragraph.cta_list_banner.field_cta_list_title_middle.yml
+++ b/config/sites/default/field.field.paragraph.cta_list_banner.field_cta_list_title_middle.yml
@@ -10,7 +10,7 @@ field_name: field_cta_list_title_middle
 entity_type: paragraph
 bundle: cta_list_banner
 label: 'Title (middle)'
-description: ''
+description: 'Recommend less than 15 characters per line.'
 required: true
 translatable: false
 default_value: {  }
