--- a/config/sites/default/block.block.services.yml
+++ b/config/sites/default/block.block.services.yml
@@ -6,6 +6,7 @@ dependencies:
     - facets.facet.services
   module:
     - facets
+    - system
   theme:
     - tower_health
 id: services
@@ -20,4 +21,9 @@ settings:
   provider: facets
   label_display: visible
   block_id: services
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: "/find-a-location\r\n/find-a-location*"
+    negate: false
+    context_mapping: {  }
