fix the find a provider filter to have a default 'any' result

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.yml
@@ -41,6 +41,7 @@ form_sections:
         type: select
         chosen: true
         children:
+          - title: Any
           - title: Male
           - title: Female
       -
