darken trust-aa slightly

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/colors.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/colors.yml
@@ -24,7 +24,7 @@ items:
   - name: $uplifting-ltst
     value: '#f8f1ce'
   - name: $trust-aa
-    value: '#4776bd'
+    value: '#4271b8'
   - name: $trust
     value: '#4d7bbe'
   - name: $trust-med
