--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_find_us
+    - field.field.node.location.field_location_geo
     - field.field.node.location.field_location_hours
     - field.field.node.location.field_location_id
     - field.field.node.location.field_location_image
@@ -147,6 +148,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_location_geo: true
   field_location_id: true
   field_location_type: true
   search_api_excerpt: true
