Remove required option.

--- a/config/sites/default/field.field.paragraph.card.field_card_description.yml
+++ b/config/sites/default/field.field.paragraph.card.field_card_description.yml
@@ -11,7 +11,7 @@ entity_type: paragraph
 bundle: card
 label: Description
 description: 'The message you''re trying to define.'
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
