--- a/config/sites/default/field.field.paragraph.card.field_card_link.yml
+++ b/config/sites/default/field.field.paragraph.card.field_card_link.yml
@@ -13,7 +13,7 @@ entity_type: paragraph
 bundle: card
 label: Link
 description: 'Where would you like the visitor to go? This can be within Tower Health or external links.'
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
