--- a/config/sites/default/field.field.paragraph.cta_banner.field_cta_banner_title_top.yml
+++ b/config/sites/default/field.field.paragraph.cta_banner.field_cta_banner_title_top.yml
@@ -10,7 +10,7 @@ field_name: field_cta_banner_title_top
 entity_type: paragraph
 bundle: cta_banner
 label: 'Title (top)'
-description: ''
+description: 'Recommend less than 15 characters per line.'
 required: false
 translatable: false
 default_value: {  }
