--- a/config/sites/default/block.block.entityviewcontent.yml
+++ b/config/sites/default/block.block.entityviewcontent.yml
@@ -14,7 +14,7 @@ provider: null
 plugin: 'entity_view:node'
 settings:
   id: 'entity_view:node'
-  label: 'Entity view (Content)'
+  label: 'Page Header Content'
   provider: ctools
   label_display: '0'
   view_mode: page_header
@@ -25,6 +25,8 @@ visibility:
     id: 'entity_bundle:node'
     bundles:
       location: location
+      page: page
+      profile: profile
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
